--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CDN Link of react and react dom -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <!-- CDN link of babel (transfilar) -->
     <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+
+    <!-- Custom css link -->
     <link rel="stylesheet" href="/assets/style.css">
-    <title>React</title>
+
+    <title>React App</title>
 </head>
 
 <body>
