--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <!-- CDN link of babel (transfilar) -->
     <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
 
-    <!-- Custom css link -->
-    <link rel="stylesheet" href="/assets/style.css">
+    <!-- Tailwind CSS CDN link -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Custom CSS link -->
+    <link rel="stylesheet" href="/assets/styles.css">
     <title>React App</title>
 </head>
 
